# clio-api-model-generator

./: .gitignore  README.md  generate_models.py  grow.openapi.yaml  openapi.json  pyproject.toml  requirements.txt  sorted_openapi_spec.json
expected_model_output/: fields.py  query.py  schemas.py
expected_model_output/grow/: components.py  request_body.py
expected_model_output/manage/: components.py  fields.py
generators/: components.py  endpoints.py  fields.py  schema.py
src/: clio_api_model_generator.py
src/clio_api_model_generator/: __init__.py  clio_api_model_generator.py
src/clio_api_model_generator/generators/: __init__.py  components.py  request_body.py
src/clio_api_model_generator/generators/clio/manage/: builder.py  components.py  config.py  endpoints.py  fields.py  query.py  request_body.py
src/clio_api_model_generator/utils/: sort_schema.py
src/generators/: fields.py  query.py
static/: models_registry.py
tests/: manage.py
tests/expected_model_output/grow/: endpoints.py  fields.py  query.py
tests/expected_model_output/manage/: query.py  request_body.py
utils/: sort_schema.py
