[project]
name = "clio_api_model_generator"
version = "0.1.0"
description = "A utility to generate Clio API models from OpenAPI specifications for use with our Clio API Python Client."
authors = [
    { name="Unigrated Partners", email="dev@unigratedpartners.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }

dependencies = [
    "requests",
    "PyYAML"
]

[project.urls]
Homepage = "https://github.com/unigrated-solutions/clio-api-model-generator"
API Client = "https://github.com/unigrated-solutions/clio-api-python-client"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
